--- a/Univibe/src/component/Nav/NavStyle.css
+++ b/Univibe/src/component/Nav/NavStyle.css
@@ -1,14 +1,15 @@
 #nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 10px 20px;
+    padding: 20px 100px;
     border-bottom: 1px solid #ccc;
     background-color: white;
+    gap: 300px;
 }
 
 #nav .logo {
-    font-size: 24px;
+    font-size: 44px;
     font-weight: bold;
     color: #D46332;
     font-family: 'Georgia', serif;
@@ -33,12 +34,12 @@
 #nav .search-input {
     border: none;
     outline: none;
-    font-size: 16px;
-    padding-left: 10px;
+    font-size: 20px;
+    padding-left: 20px;
 }
 
 #nav .search-icon {
-    font-size: 18px;
+    font-size: 25px;
     color: #666;
     cursor: pointer;
 }
