--- a/Univibe/src/component/Nav/NavStyle.css
+++ b/Univibe/src/component/Nav/NavStyle.css
@@ -57,6 +57,8 @@
     display: flex;
     align-items: center;
     gap: 5px;
+    color: black;
+    text-decoration: none;
 }
 
 #nav .menu-item:hover {
