--- a/Univibe/src/component/Content/ContentStyle.css
+++ b/Univibe/src/component/Content/ContentStyle.css
@@ -52,13 +52,12 @@
     justify-content: center;
     align-items: center;
     height: 50px;
-    margin: 0px 0px;   
-
+    margin-top: 10px;
 }
 .topic {
     font-size: 30px;
     color: black;
     font-family: 'Georgia', serif;
     margin: 0px 0px;   
-    padding-right: 1100px;
+    padding-right: 1150px;
 }
