--- a/Univibe/src/component/Content/ContentStyle.css
+++ b/Univibe/src/component/Content/ContentStyle.css
@@ -10,8 +10,6 @@
 
 .card {
     background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     width: 200px;
     display: flex;
@@ -21,14 +19,15 @@
 
 .photo {
     width: 100%;
-    height: auto;
     overflow: hidden;
+    border-radius: 5px;
 }
 
 .photo img {
+    object-fit: fill; 
     width: 100%;
+    height: 280px;
     display: block;
-    object-fit: cover;
 }
 
 .date {
