--- a/Univibe/src/component/Detail/DetailStyle.css
+++ b/Univibe/src/component/Detail/DetailStyle.css
@@ -3,6 +3,7 @@
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+    font-family: 'Itim', sans-serif;
   }
   
   .background-blur {
@@ -18,9 +19,10 @@
   }
   
   .event-card {
-    max-width: 1100px;
-    height: 600px;
+    max-width: 1000px;
+    height: 500px;
     margin: 0 auto;
+    margin-top: 50px;
     padding: 20px;
     display: flex;
     background: rgba(255, 255, 255, 0.8);
@@ -29,6 +31,7 @@
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     z-index: 10;
+    gap: 10px;
   }
   
   .event-image {
@@ -41,17 +44,20 @@
     padding: 50px;
     width: 50%;
     color: #333;
+    gap: 10px;
   }
   
   .event-title {
     font-size: 4em;
     font-weight: bold;
     margin-bottom: 10px;
+
   }
   
   .event-subtitle {
     font-size: 2em;
     margin-bottom: 20px;
+
   }
   
   .event-info {
@@ -59,6 +65,8 @@
     align-items: center;
     font-size: 2em;
     margin-bottom: 10px;
+    gap: 5px;
+
   }
   
   .icon {
