--- a/Univibe/src/component/Nav/NavStyle.css
+++ b/Univibe/src/component/Nav/NavStyle.css
@@ -46,7 +46,7 @@
     display: flex;
     gap: 20px;
     font-size: 18px;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Itim', sans-serif;
     color: black;
 }
 
