--- a/Univibe/src/component/Content/ContentStyle.css
+++ b/Univibe/src/component/Content/ContentStyle.css
@@ -63,4 +63,13 @@
     font-family: 'Georgia', serif;
     margin: 0px 0px;   
     padding-right: 1150px;
+    font-family: 'Itim', sans-serif;
+}
+.topic2 {
+    font-size: 30px;
+    color: black;
+    font-family: 'Georgia', serif;
+    margin: 0px 0px;   
+    padding-right: 1120px;
+    font-family: 'Itim', sans-serif;
 }
