--- a/Univibe/src/component/Promote/PromoteStyle.css
+++ b/Univibe/src/component/Promote/PromoteStyle.css
@@ -3,7 +3,14 @@
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid #020202;
-    gap: 230px;
+    gap: 10%;
+}
+
+@media (max-width: 768px) {
+    #promote {
+        flex-direction: column;
+        gap: 20px;
+    }
 }
 
 #promote .logo {
