--- a/Univibe/src/component/Content/ContentStyle.css
+++ b/Univibe/src/component/Content/ContentStyle.css
@@ -14,13 +14,16 @@
     background-color: #fff;
     overflow: hidden;
     width: 200px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     text-decoration: none;
+    border-radius: 10px;
 }
 
 .photo {
-    width: 100%;
+    width: 200px;
+    height: 260px;
     overflow: hidden;
     border-radius: 10px;
     box-shadow: #333;
@@ -29,24 +32,27 @@
 
 .photo img {
     object-fit: fill; 
-    width: 100%;
-    height: 280px;
+    width: 200px;
+    height: 100%;
     display: block;
 }
 
 .date {
+    margin-top: 5px;
     color: #f26b8a;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     font-weight: 600;
 }
 
 .Name {
+    margin: 1px;
     font-size: 2rem;
     font-weight: 700;
     color: #333;
 }
 
 .Locate {
+    margin: 2px;
     font-size: 1.7rem;
     color: #999;
 }
