--- a/Univibe/src/component/Detail/EventDetailStyle.css
+++ b/Univibe/src/component/Detail/EventDetailStyle.css
@@ -35,6 +35,7 @@
 }
 
 .event-image {
+  border-radius: 10px;
   width: 40%;
   height: 100%;
   object-fit: cover;
@@ -166,7 +167,7 @@
 
 .preview-image {
   width: 100%;
-  height: 250px;
+  height: 100%;
   overflow: hidden;
   border-radius: 10px;
   margin-bottom: 15px;
@@ -178,6 +179,7 @@
   height: 100%;
   object-fit: cover;
   transition: transform 0.5s ease;
+  
 }
 
 .preview-image img:hover {
