--- a/Univibe/src/component/Footer/FooterStyle.css
+++ b/Univibe/src/component/Footer/FooterStyle.css
@@ -1,9 +1,9 @@
 .footer {
     background-color: #f8f8f8;
     border-top: 1px solid #eaeaea;
-    padding: 50px 0 20px;
     color: #444;
     font-family: 'Itim', sans-serif;
+    margin-top: 10px;
 }
 
 .footer-container {
@@ -12,14 +12,16 @@
     justify-content: space-between;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0px 10px;
+    font-size: 1.6rem;
+    height: 260px;
 }
 
 .footer-section {
     flex: 1;
     min-width: 200px;
     margin-bottom: 30px;
-    padding: 0 15px;
+    padding: 0 10px;
 }
 
 .footer-section.about {
@@ -32,14 +34,14 @@
 }
 
 .footer-logo img {
-    height: 60px;
+    height: 100px;
     width: auto;
 }
 
 .footer-description {
     margin-bottom: 20px;
     line-height: 1.6;
-    font-size: 0.95rem;
+    font-size: 1.6rem;
     color: #666;
 }
 
@@ -66,7 +68,7 @@
 }
 
 .footer-section h3 {
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     margin-bottom: 20px;
     position: relative;
     padding-bottom: 10px;
@@ -129,13 +131,13 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    font-size: 0.85rem;
+    font-size: 1.5rem;
     color: #777;
 }
 
 .footer-bottom-links {
     display: flex;
-    gap: 20px;
+    gap: 2px;
 }
 
 .footer-bottom-links a {
