--- a/Univibe/src/pages/Home.css
+++ b/Univibe/src/pages/Home.css
@@ -50,3 +50,14 @@
         transform: rotate(360deg);
     }
 }
+.background1-blur {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;    
+    height: 160vh;
+    background-size: cover;
+    background-position: center;
+    filter: blur(5px);
+    z-index: -1;
+  }
