--- a/Univibe/src/pages/SearchResults.css
+++ b/Univibe/src/pages/SearchResults.css
@@ -1,12 +1,11 @@
 .search-results-page {
     min-height: 100vh;
-    background-color: #f9f9f9;
 }
 
 .search-container {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 100px 20px 40px;
+    padding: 5px 20px 40px;
 }
 
 .search-header {
@@ -400,3 +399,14 @@
         padding: 15px;
     }
 }
+.background2-blur {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;    
+    height: 140vh;
+    background-size: cover;
+    background-position: center;
+    filter: blur(5px);
+    z-index: -1;
+  }
