--- a/Univibe/src/component/Nav/NavStyle.css
+++ b/Univibe/src/component/Nav/NavStyle.css
@@ -3,8 +3,7 @@
     justify-content: center;
     align-items: center;
     padding: 10px 2%;
-    border-bottom: 1px solid #ccc;
-    background-color: white;
+    border-bottom: 1.5px solid #161515;
     top: 0;
     left: 0;
     right: 0;
